--- a/web/src/classification.html
+++ b/web/src/classification.html
@@ -1538,8 +1538,8 @@ title: Smile - Classification
         <div class="tab-pane active" id="java_25">
             <div class="code" style="text-align: left;">
           <pre class="prettyprint lang-java"><code>
-    jshell> import smile.data.formula.*
-    jshell> DecisionTree.fit(Formula.lhs("V1"), zip)
+    smile> import smile.data.formula.*
+    smile> DecisionTree.fit(Formula.lhs("V1"), zip)
     $232 ==> n=7291
     node), split, n, loss, yval, (yprob)
     * denotes terminal node
