--- a/web/src/clustering.html
+++ b/web/src/clustering.html
@@ -635,7 +635,7 @@ title: Smile - Clustering
         <div class="tab-pane active" id="java_12">
             <div class="code" style="text-align: left;">
           <pre class="prettyprint lang-java"><code>
-    jshell> DeterministicAnnealing.fit(x, 12, 0.9, 100, 1E-4, 1E-2)
+    smile> DeterministicAnnealing.fit(x, 12, 0.9, 100, 1E-4, 1E-2)
     $126 ==> Cluster distortion: 2862.52100
     Cluster size of 1800 data points:
     Cluster    1    297 (16.5%)
